--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="map.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-    <script src="map.js"></script>
+    <script src="js/papaparse.min.js"></script>
+    <script src="js/map.js"></script>
     <script>
 
         $(document).ready(function(){
