--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-
+    <title>Roman de la Rose</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" href="map.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
